--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "express": "^4.18.2",
     "firebase": "^11.6.0",
     "lucide-react": "^0.503.0",
+    "mime-types": "^3.0.1",
     "multer": "^1.4.5-lts.2",
+    "nodemailer": "^6.10.1",
     "path-to-regexp": "^6.2.1",
     "pdf-lib": "^1.17.1",
     "pdfjs-dist": "^5.1.91",
@@ -30,6 +32,7 @@
     "react-dom": "^19.1.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.15",
     "react-router-dom": "^7.5.1",
     "sqlite": "^5.1.1",
     "sqlite3": "^5.1.7",
